# zlib-ng

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  adler32_p.h  arch_functions.h  chunkset_tpl.h  compare256_rle.h  configure  crc32.c  crc32_braid_comb.c  crc32_braid_tbl.h  crc32_chorba_p.h  crc32_p.h  deflate.c  deflate.h  deflate_fast.c  deflate_huff.c  deflate_medium.c  deflate_p.h  deflate_quick.c  deflate_rle.c  deflate_slow.c  deflate_stored.c  fallback_builtins.h  functable.c  functable.h  gzguts.h  gzlib.c  infback.c  inffast_tpl.h  inflate.c  inflate.h  inflate_p.h  inftrees.c  insert_string.c  insert_string_p.h  insert_string_tpl.h  match_tpl.h  rm-pkg.sh  (+12 more)
.github/actions/restore-apt-cache/: action.yml
.github/actions/update-apt-cache/: action.yml
.github/workflows/: analyze.yml  cache.yml  cmake.yml  codeql.yml  configure.yml  delta.yml  fuzz.yml  libpng.yml  link.yml  lint.yml  orchestrator.yml  osb.yml  pigz.yml  pkgcheck.yml  release.yml
arch/arm/: Makefile.in  acle_intrins.h  adler32_neon.c  adler32_neon_dotprod.c  adler32_neon_tpl.h  arm_features.c  arm_features.h  arm_functions.h  arm_natives.h  chunkset_neon.c  compare256_neon.c  crc32_armv8.c  crc32_armv8_p.h  crc32_armv8_pmull_eor3.c  neon_intrins.h
arch/generic/: adler32_c.c  compare256_c.c  compare256_p.h  crc32_braid_c.c  crc32_chorba_c.c  generic_functions.h
arch/loongarch/: chunkset_lasx.c  chunkset_lsx.c  compare256_lasx.c  compare256_lsx.c  crc32_la.c  loongarch_functions.h
arch/power/: adler32_vmx.c  power_functions.h
arch/riscv/: compare256_rvv.c  crc32_zbc.c  riscv_features.c  riscv_functions.h
arch/s390/: crc32_vx.c  s390_functions.h  s390_natives.h  slide_hash_vx.c  vx_intrins.h
arch/x86/: Makefile.in  adler32_ssse3.c  chunkset_avx2.c  chunkset_avx512.c  chunkset_ssse3.c  compare256_avx2.c  compare256_avx512.c  compare256_sse2.c  crc32_chorba_sse2.c  crc32_chorba_sse41.c  crc32_pclmulqdq_tpl.h  x86_functions.h  x86_intrins.h  x86_natives.h
cmake/: check-compiler-flags.cmake  detect-arch.c  detect-arch.cmake  detect-coverage.cmake  detect-intrinsics.cmake  detect-sanitizer.cmake  toolchain-aarch64-clang.cmake  toolchain-armv7a-clang.cmake  toolchain-e2k-lcc.cmake
test/: CMakeLists.txt  gh1235.c  infcover.c  test_adler32.cc  test_adler32_copy.cc  test_chunked.cc  test_compare256.cc  test_compare256_rle.cc  test_crc32.cc  test_crc32_copy.cc  test_cve-2003-0107.cc  test_deflate.cc  test_deflate_concurrency.cc  test_gzio.cc  test_inflate_back.cc  test_shared_ng.h
test/abi/: ignore
test/benchmarks/: CMakeLists.txt  README.md  benchmark_adler32.cc  benchmark_adler32_copy.cc  benchmark_chunkmemset.cc  benchmark_compare256.cc  benchmark_compare256_rle.cc  benchmark_compress.cc  benchmark_corpora.cc  benchmark_crc32.cc  benchmark_crc32_copy.cc  benchmark_deflate.cc  benchmark_inflate.cc  benchmark_inflate_chunked.cc  benchmark_insert_string.cc  benchmark_main.cc  benchmark_png_decode.cc  benchmark_png_decode_small.cc  benchmark_png_shared.h  benchmark_slidehash.cc  benchmark_uncompress.cc
test/fuzz/: fuzzer_checksum.c  fuzzer_compress.c  fuzzer_example_dict.c  fuzzer_example_flush.c  fuzzer_example_large.c  fuzzer_example_small.c  fuzzer_minigzip.c  standalone_fuzz_target_runner.c
tools/: makecrct.c  maketrees.c
utils/: CMakeLists.txt  README.md  makefixed.c  minideflate.c  minigzip.c
